# teste

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 277a267a4acb_teste8.py  358c0253ab2b_teste5.py  43ae2d2433fa_teste3.py  63d6c63a3e80_teste9.py  add787788b4a_teste4.py  d81d631679e3_teste6.py  e84f40ca6c9c_teste.py  e9eb05882859_teste2.py
src/: modelos.py
