[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["jvras58 <jvras@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
